# ResearchGravity

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CONTEXT_PACKS_COMPLETE.md  CONTEXT_PACKS_IMPLEMENTATION_SUMMARY.md  CONTEXT_PACKS_V2_PROTOTYPE_RESULTS.md  CONTEXT_PACKS_V2_RESEARCH.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  PHASE_7_INTEGRATION_READY.md  PHASE_7_PLAN.md  PRD_COHERENCE_ENGINE.md  PRD_CROSS_PLATFORM_CAPTURE.md  PRD_UCW_RAW_MCP.md  QUICK_START.md  README.md  README_CONTEXT_PACKS_V2.md  ROADMAP.md  ROUTING_USAGE_BASED_UPDATE.md  WHITEPAPER.md  archive_session.py  auto_capture.py  auto_capture_v2.py  backfill_errors.py  backfill_learnings.py  backfill_telemetry.py  backfill_vectors.py  build_packs.py  chatgpt_importer.py  chatgpt_quality_scorer.py  checkpoint.py  cli_import_log.json  coherence_report.txt  coherence_report_full.json  coherence_report_full.txt  confidence_scorer.py  context_packs_v2_layer4_rl.py  (+43 more)
.beads/: issues.jsonl
.claude/: session-task.md  settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.graveyard/: MANIFEST.md
.ralph-tui/: progress.md  session-meta.json
api/: __init__.py  security.py  server.py
capture/: __init__.py  __main__.py  base.py  config.py  dedup.py  manager.py  normalizer.py  quality.py
chrome-extension/: background.js  manifest.json
cli/: __init__.py  commands.py  ui.py
coherence_engine/: __init__.py  __main__.py  alerts.py  config.py  (+20 more)
cpb/: README.md  __init__.py  __main__.py  cli.py  critic_verifier.py  deep_research.py  dq_scorer.py  feedback_cli.py  frontier_scout.py  ground_truth.py  grounding_audit.py  llm_client.py  orchestrator.py  paper_code_bridge.py  precision_cli.py  precision_config.py  precision_orchestrator.py  pyproject.toml  query_enhancer.py  requirements.txt  rg_adapter.py  router.py  run_logger.py  search_layer.py  types.py
cpb/tests/: __init__.py  conftest.py  test_precision_v24.py
(+305 files in other folders)
