[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpb-core"
version = "1.0.0"
description = "Cognitive Precision Bridge - Unified AI orchestration with precision-aware routing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dicoangelo", email = "metaventionsai@gmail.com"}
]
keywords = [
    "ai",
    "llm",
    "orchestration",
    "multi-agent",
    "consensus",
    "routing",
    "cognitive",
    "precision",
    "gemini",
    "claude",
    "openai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Dicoangelo/researchgravity"
Repository = "https://github.com/Dicoangelo/researchgravity"
Documentation = "https://github.com/Dicoangelo/researchgravity#readme"

[project.scripts]
cpb = "cpb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cpb*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
